--- a/app.json
+++ b/app.json
@@ -22,6 +22,17 @@
     },
     "web": {
       "favicon": "./assets/favicon.png"
+    },
+    "extra": {
+      "eas": {
+        "projectId": "54d500a5-bf62-4c7c-9da3-acae9c564daf"
+      }
+    },
+    "runtimeVersion": {
+      "policy": "appVersion"
+    },
+    "updates": {
+      "url": "https://u.expo.dev/54d500a5-bf62-4c7c-9da3-acae9c564daf"
     }
   }
 }
